examples/test/testpolicy6189.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6189
  namespace: namespace357
spec:
  podSelector:
    matchLabels:
      key3: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value0
          key4: value29
          key10: value5
      podSelector:
        matchLabels:
          key23: value22
